<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.VerificationFragment">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backspace"
        android:layout_margin="20dp"
        android:backgroundTint="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerVertical="true"
       android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_otp_verification"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                />
            <TextView
                android:id="@+id/txt_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+994 5067499999"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                />
        </LinearLayout>

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/etxt_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:visibility="visible"
            android:textStyle="bold"
            android:textIsSelectable="false"
            app:pinLineStrokeSelected="4dp"
            app:pinTextBottomPadding="10dp"
            app:pinLineColors="@color/purple_500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:text="@string/do_not_recieve_opt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_500"
            android:textSize="13sp"
            android:text="@string/bt_resend"/>

    </LinearLayout>

        <Button
            android:id="@+id/button_verifyProceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_500"
            android:paddingBottom="7dp"
            android:textSize="17sp"
            android:paddingTop="7dp"
            android:text="@string/verify_proceed"
            android:layout_margin="20dp"/>

    </LinearLayout>






</LinearLayout>