<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    tools:context=".fragments.registration.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone_number"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="20sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send"
            android:textColor="@color/gray_or_black"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/layoutForSendVerification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_input_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:hint="Phone"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/purple_500"
                app:hintTextColor="@color/gray"
                app:prefixText="+994"
                app:prefixTextColor="@color/gray"
                app:startIconDrawable="@drawable/ic_phone"
                app:startIconTint="@color/selector_edit_text">

                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:elevation="0dp">

                <Spinner
                    android:id="@+id/spinnerResetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:entries="@array/spinner_items" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/send_verificationCode_forResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/send_button_background"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="35dp"
                android:layout_marginTop="20dp"
                android:paddingRight="35dp"
                android:text="@string/send"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutForChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/new_password"
                android:drawableTint="@color/selector_edit_text"
                android:background="@drawable/selector_for_edit_password"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:drawableStart="@drawable/ic_lock"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawablePadding="10dp"
                android:hint="@string/confirm_password"
                android:drawableTint="@color/selector_edit_text"
                android:background="@drawable/selector_for_edit_password"
                android:inputType="phone" />

            <Button
                android:id="@+id/button_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/send_button_background"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="20dp"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:paddingRight="20dp"
                android:text="Change"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_or_black"
        android:visibility="invisible"
        android:id="@+id/rel_progress_resetPassword">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_resetPassword"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/purple_500" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_condition_resetPassword"
            android:layout_below="@+id/progress_resetPassword"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Phone number is checking \n Please wait..."/>

    </RelativeLayout>

</RelativeLayout>