<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:id="@+id/ic_backFromLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_back"
        app:tint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:text="Welcome to Delivery!"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="Phone"
            app:prefixText="+994"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/purple_500"
            app:hintTextColor="@color/gray"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/selector_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_phone_number_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone|text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="Password"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/purple_500"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/selector_edit_text"
            app:helperTextTextColor="@color/gray"
            app:hintTextColor="@color/gray"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/selector_edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:elevation="0dp">

            <Spinner
                android:id="@+id/spinnerForLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:entries="@array/spinner_items" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bt_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_or_black"
            android:gravity="right"
            android:textSize="13sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_password"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/text_white"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="or"
                android:textColor="@color/light_black"
                android:textSize="16sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:backgroundTint="#fff"
            android:drawableLeft="@drawable/ic_google"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_an_account"
                android:textColor="@color/light_black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/purple_700"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rel_progress_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_or_black"
        android:visibility="invisible">

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress_login"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/purple_500"
            tools:ignore="MissingClass" />

        <TextView
            android:id="@+id/txt_condition_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_login"
            android:text="Your account information is checking. \n Please wait..."
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>